@startuml Empleados
skinparam classAttributeIconSize 0

abstract class Empleado {
    {static} + totalEmpleados : int
    {static} + proximoId : int
    # id : int
    # nombre : String
    # cedula : String
    # sueldoBase : double
    + Empleado(nombre: String, cedula: String, sueldoBase: double)
    {abstract} + calcularSueldo() : double
    {abstract} + obtenerDetalles() : String
    {static} + obtenerTotalEmpleados() : int
    {static} + mostrarEstadisticas() : void
}

class Gerente {
    + Gerente(nombre: String, cedula: String, sueldoBase: double)
    + calcularSueldo() : double
    + obtenerDetalles() : String
}

class Supervisor {
    + Supervisor(nombre: String, cedula: String, sueldoBase: double)
    + calcularSueldo() : double
    + obtenerDetalles() : String
}

class Obrero {
    + Obrero(nombre: String, cedula: String, sueldoBase: double)
    + calcularSueldo() : double
    + obtenerDetalles() : String
}

class NominaEmpresa {
    + main(args: String[]) : void
}

Empleado <|-- Gerente
Empleado <|-- Supervisor
Empleado <|-- Obrero

NominaEmpresa "1" --> "*" Empleado : gestiona >
@enduml